# openapi.yaml
@@ -102,6 +102,30 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/Status'
+    /api/app_server/buy:
+        post:
+            tags:
+                - App
+            operationId: App_Buy
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/BuyRequest_SendBody'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/BuyReply'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
     /api/app_server/delete_balance_reward:
         post:
             tags:
@@ -562,6 +586,20 @@ components:
         AdminWithdrawReply:
             type: object
             properties: {}
+        BuyReply:
+            type: object
+            properties:
+                status:
+                    type: string
+        BuyRequest_SendBody:
+            type: object
+            properties:
+                amount:
+                    type: string
+                sign:
+                    type: string
+                publicKey:
+                    type: string
         DeleteBalanceRewardReply:
             type: object
             properties:
@@ -935,10 +973,16 @@ components:
                     type: string
                 uudt:
                     type: string
+                amount:
+                    type: string
                 LocationList:
                     type: array
                     items:
                         $ref: '#/components/schemas/UserInfoReply_List'
+                ListEth:
+                    type: array
+                    items:
+                        $ref: '#/components/schemas/UserInfoReply_ListEthRecord'
                 listReward:
                     type: array
                     items:
@@ -960,6 +1004,13 @@ components:
                     items:
                         $ref: '#/components/schemas/UserInfoReply_ListRecommend'
         UserInfoReply_List:
+            type: object
+            properties:
+                amount:
+                    type: string
+                createdAt:
+                    type: string
+        UserInfoReply_ListEthRecord:
             type: object
             properties:
                 amount:
